infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-mongo-depl 
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: auth-mongo 
    template:
        metadata:
            labels:
                app: auth-mongo
        spec:
            containers: 
                - name: auth-mongo
                  image: mongo 
---
apiVersion: v1
kind: Service
metadata:
    name: auth-mongo-clusterip-srv
spec:
    selector:
        app: auth-mongo
    type: ClusterIP
    ports:
        - name: auth-db 
          protocol: TCP
          port: 27017
          targetPort: 27017
