infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: orders-mongo-depl 
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: orders-mongo 
    template:
        metadata:
            labels:
                app: orders-mongo
        spec:
            containers: 
                - name: orders-mongo
                  image: mongo 
---
apiVersion: v1
kind: Service
metadata:
    name: orders-mongo-clusterip-srv
spec:
    selector:
        app: orders-mongo
    type: ClusterIP
    ports:
        - name: orders-db 
          protocol: TCP
          port: 27017
          targetPort: 27017
