infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tickets-depl 
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: tickets 
    template:
        metadata:
            labels:
                app: tickets 
        spec:
            containers: 
                - name: tickets
                  image: badlg/tickets 
---
apiVersion: v1
kind: Service
metadata:
    name: tickets-clusterip-srv
spec:
    selector:
        app: tickets
    type: ClusterIP
    ports:
        - name: tickets 
          protocol: TCP
          port: 3000
          targetPort: 3000
